force-app/main/default/objects/Profile__c/fields/Recent_fiscal_budget_range__c.field-meta.xml
<CustomField>
    <fullName>Recent_fiscal_budget_range__c</fullName>
    <description>Recent budget range as selected by the applicant in the profile form</description>
    <inlineHelpText>Recent budget range as selected by the applicant in the profile form</inlineHelpText>
    <label>Recent fiscal budget range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $30,000 USD</fullName>
            </value>
            <value>
                <fullName>$30,001 - $50,000 USD</fullName>
            </value>
            <value>
                <fullName>$50,001 - $100,000 USD</fullName>
            </value>
            <value>
                <fullName>$100,001 - $200,000 USD</fullName>
            </value>
            <value>
                <fullName>$200,001 - $300,000 USD</fullName>
            </value>
            <value>
                <fullName>$300,001 - $500,000 USD</fullName>
            </value>
            <value>
                <fullName>$500,001 - $1,000,000 USD</fullName>
            </value>
            <value>
                <fullName>$1,000,001+ USD</fullName>
            </value>
            <value>
                <fullName>$300,001+ USD</fullName>
                <isActive>false</isActive>
                <label>$300,001+ USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>