force-app/main/default/objects/Profile__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <description>Checked if this profile&apos;s account is a grantee.  If no linked account, then checked if the applicant claims in the profile to have applied to us and to have received a grant.</description>
    <formula>IF( NOT(ISBLANK( Account__c )), Account__r.Grantee__c,
 IF( AND(Applied_before__c,  Received_grant__c ), TRUE, FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this profile&apos;s account is a grantee.  If no linked account, then checked if the applicant claims in the profile to have applied to us and to have received a grant.</inlineHelpText>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>