force-app/main/default/objects/Profile__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of this profile</description>
    <formula>IF ( NOT(ISBLANK(Date_declined__c)), &quot;0 Profile declined&quot;,
IF ( NOT(ISBLANK( Decline_reason__c )), &quot;2.9 Profile to decline&quot;,
IF ( AND(
      NOT(ISBLANK(Proposal_recent__c)), 
      NOT(ISBLANK(Date_review_completed__c))
   ), &quot;5 Proposal linked, Profile reviewed&quot;,
IF ( NOT(ISBLANK(Proposal_recent__c)), &quot;4.5 Proposal linked, Profile not reviewed&quot;,
IF ( AND(
      NOT(ISBLANK(Date_holdover_sent__c)), 
      NOT(ISBLANK(Date_review_completed__c))
   ), &quot;3.1 Holdover sent, Profile reviewed&quot;,
IF ( NOT(ISBLANK(Date_review_completed__c)), &quot;3 Profile reviewed&quot;,
IF ( AND(
      NOT(ISBLANK(Date_submitted__c)),
      NOT(ISBLANK(Date_holdover_sent__c))
   ), &quot;1.6 Holdover sent, Profile not reviewed&quot;,
IF ( NOT(ISBLANK(Date_submitted__c)), &quot;1.5 Profile submitted&quot;,
&quot;1 Profile pending&quot;
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of this profile</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>