force-app/main/default/objects/Profile__c/fields/Status_external__c.field-meta.xml
<CustomField>
    <fullName>Status_external__c</fullName>
    <description>External status of this profile (the version that is viewed by applicant)</description>
    <formula>IF ( CONTAINS( LOWER(Status__c) , &quot;declined&quot; ), &quot;Declined&quot;,
IF ( NOT (ISBLANK ( Date_submitted__c )), &quot;Submitted&quot;,
&quot;Pending&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>External status of this profile (the version that is viewed by applicant)</inlineHelpText>
    <label>Status external</label>
    <type>Text</type>
</CustomField>