force-app/main/default/objects/Profile__c/fields/Strategies_Activities__c.field-meta.xml
<CustomField>
    <fullName>Strategies_Activities__c</fullName>
    <description>The organization&apos;s strategies/activities as submitted by the applicant</description>
    <inlineHelpText>The organization&apos;s strategies/activities as submitted by the applicant</inlineHelpText>
    <label>Strategies/Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>