force-app/main/default/objects/Profile__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Group&apos;s website</description>
    <inlineHelpText>Group&apos;s website</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>