force-app/main/default/objects/Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Status__c</columns>
    <columns>Date_submitted__c</columns>
    <columns>Last_modified_datetime__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>